# Network-File-System

./: .gitignore  CMakeLists.txt  README.md  lib.cpp  lib.hpp  xdd1
client/: client.cpp  command.cpp  command.h  connector.cpp  connector.h  linenoise_setup.h  loop.cpp  loop.h  reader.cpp  reader.h  saver.cpp  saver.h  utils.cpp  utils.h
client/command_handlers/: get_dir_handler.cpp  get_handler.cpp  handlers.h  put_handler.cpp  record_handler.cpp
client/include/: lib.hpp
client/tests/: test_get_handle.cpp  test_helper.h  test_put_handler.cpp  test_record_handler.cpp
libraries/client/: CMakeLists.txt  lib.cpp  lib.hpp
libraries/client/include/: messages.hpp
libraries/client/lib/: messages.hpp
libraries/client/tests/: test1.cpp
libraries/core/: CMakeLists.txt  messages.cpp  messages.hpp  serializers.cpp  serializers.hpp
performance_tests/: test_large_file.cpp  test_small_files.cpp  test_small_files_multiple.cpp  test_write_large_file.cpp  test_write_small_files.cpp
server/: DescriptorsMapper.cpp  DescriptorsMapper.h  handler.cpp  handler.h  server.cpp  shadowfile.txt  worker.cpp  worker.h  worker.hpp
src/: helper.cpp
tests/: test1  test1.cpp  test_large_file.cpp  test_message_builder.cpp  test_message_parser.cpp  test_small_files.cpp  test_small_files_multiple.cpp  test_test.cpp  test_write_large_file.cpp  test_write_small_files.cpp  utils.hpp
tests/include/: lib.hpp
